--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
+        <title>Web App – Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    
     </head>
     <body>
         <div class="container">
@@ -13,10 +15,10 @@
                 </div>
                  <br/>
                  <div class="flex w-75 m-auto">
-                    <span class="w-50" >Rate</span>
+                    <span class="w-50" >Interest Rate</span>
                     <div class="w-50 flex justify-start">
                         <input  oninput="updateTextInput(this.value);"  type="range"  id="rate" min="1" max="20" step="0.5"  value="3.5">
-                        <output id="output">3.5</output>
+                        <output id="output">3.5%</output>
                     </div >
                   
                 </div>
@@ -37,7 +39,7 @@
                       </select>
                 </div>
                 <br/>
-                <div class="flex">
+                <div class="flex w-75 m-auto">
                     <button onclick="compute()">Compute Interest</button>
                 </div>
               <div id="result-container" class="result-container hidden">
